# nmg-game-dev

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
docs/decisions/: 2026-05-02-blender-as-meshy-gap-analysis.md
fixtures/: README.md  dogfood.uproject
plugins/nmg-game-dev-blender-addon/: __init__.py  blender_manifest.toml
plugins/nmg-game-dev-blender-addon/mcp_server/: manifest.py
plugins/nmg-game-dev-blender-addon/operators/: __init__.py  cleanup_desktop.py  generate_variants.py  optimize_mobile.py
plugins/nmg-game-dev-blender-addon/panels/: __init__.py  main_panel.py
plugins/nmg-game-dev-blender-addon/property_groups/: __init__.py  pipeline_props.py
plugins/nmg-game-dev-blender-addon/utils/: logging.py  variants.py  version.py
plugins/nmg-game-dev-ue-plugin/: nmg-game-dev.uplugin
plugins/nmg-game-dev-ue-plugin/Source/NmgGameDevEditor/: NmgGameDevEditor.Build.cs
plugins/nmg-game-dev-ue-plugin/Source/NmgGameDevEditor/Private/: NmgGameDevEditorModule.cpp
plugins/nmg-game-dev-ue-plugin/Source/NmgGameDevRuntime/: NmgGameDevRuntime.Build.cs
plugins/nmg-game-dev-ue-plugin/Source/NmgGameDevRuntime/Private/: NmgAssetResolver.cpp  NmgGameDevLog.cpp  NmgGameDevPluginUtils.cpp  NmgGameDevRuntimeModule.cpp
scripts/: run-blender-tests.sh  run-ue-tests.sh  start-blender-mcp.sh  start-unreal-mcp.sh
specs/feature-blender-add-on-skeleton-blender-mcp-wiring/: design.md  feature.gherkin  requirements.md  tasks.md
specs/feature-pipeline-composition-core-variant-aware-stage-runner/: design.md  feature.gherkin  requirements.md  tasks.md
specs/feature-scaffold-plugin-repo-session-start-hooks/: design.md  feature.gherkin  requirements.md  tasks.md
specs/feature-ue-plugin-skeleton-runtime-editor-mcp-modules/: design.md  feature.gherkin  requirements.md  tasks.md
specs/feature-umbrella-deliver-blender-mcp-only-recipe-asset-generation/: design.md  feature.gherkin  requirements.md  tasks.md
src/nmg_game_dev/: __init__.py
src/nmg_game_dev/pipeline/: __init__.py  cache.py  errors.py  prompt.py  result.py
src/nmg_game_dev/pipeline/stages/: __init__.py  _base.py  _mcp.py  cleanup.py  generate.py  import_ue.py  quality.py  texture.py  variants.py
src/nmg_game_dev/quality/: __init__.py
src/nmg_game_dev/ship/: __init__.py
src/nmg_game_dev/variants/: __init__.py
steering/: product.md  structure.md  tech.md
templates/consumer/: README.md
templates/consumer/.codex/: config.toml  hooks.json
tests/: _scaffold_contract.py  conftest.py
tests/bdd/: conftest.py  test_pipeline_bdd.py
tests/bdd/features/: pipeline_blender_first.feature  pipeline_idempotency.feature  pipeline_meshy_supplement.feature  pipeline_quality_halt.feature  scaffold-plugin-repo-session-start-hooks.feature
tests/bdd/steps/: test_scaffold.py
tests/blender/: _runner.py  conftest.py  test_addon_registration.py  test_coexistence.py  test_operator_stubs.py
tests/e2e/: conftest.py  test_pipeline_e2e.py
tests/e2e/fixtures/: fixture_prompt.json
tests/ue-automation/: results.xml
tests/ue-automation/index/: index.json
tests/unit/: test_scaffold_guards.py
tests/unit/pipeline/: test_cache.py  test_errors.py  test_prompt.py  test_result.py  test_run.py
tests/unit/pipeline/stages/: test_cleanup.py  test_generate.py  test_import_ue.py  test_quality.py  test_texture.py  test_variants.py
tests/unit/quality/: test_budget.py  test_manifest.py
tests/unit/variants/: test_paths.py
(+4 files in other folders)
