[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nmg-game-dev"
version = "0.3.0"
description = "Blender-first, Unreal-shipped content pipeline for NMG games"
readme = "CLAUDE.md"
requires-python = ">=3.11"
authors = [{ name = "Nunley Media Group" }]
license = { text = "Proprietary" }

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-bdd>=7",
  "ruff>=0.4",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nmg_game_dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
bdd_features_base_dir = "tests/bdd/features"
